--- a/helm/charts/policy/templates/deployment.yaml
+++ b/helm/charts/policy/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
       initContainers:
         - name: '{{ .Release.Name }}-{{ .Chart.Name }}-wait-for-db'
           image: postgres:latest
-          command: ['sh', '-c', 'until pg_isready -h {{ .Release.Name }}-bbk-postgresql -p 5432 -U {{ .Chart.Name }};
+          command: ['sh', '-c', 'until pg_isready -h bbk-postgresql -p 5432 -U {{ .Chart.Name }};
             do echo waiting for database; sleep 2; done;']
       containers:
         - name: policy
@@ -51,12 +51,12 @@ spec:
             - name: POLICY_BASE
               value: "http://{{ .Release.Name }}-{{ .Chart.Name }}:8004/v1"
             - name: DATABASE
-              value: "postgresql://CREDENTIALS@{{ .Release.Name }}-bbk-postgresql/bit_broker"
+              value: "postgresql://CREDENTIALS@bbk-postgresql/bit_broker"
             - name: POLICY_CACHE
               value: "redis://{{ .Release.Name }}-{{ .Chart.Name }}-cache:6379"
             - name: RATE_LIMIT_BASE
               value: "http://{{ .Release.Name }}-rate-service-bbk:4000/api/v1"
-            - name: METRICS_ENABLED
+            - name: APP_SERVER_METRICS
               value: "{{ .Values.metrics.enabled | default .Values.global.metrics.enabled }}"
           envFrom:
             - secretRef:
