--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -180,7 +180,7 @@ bbk-postgresql:
 
   ## ConfigMap with scripts to be run at first boot
   ## NOTE: This will override initdbScripts
-  initdbScriptsConfigMap: bit-broker-postgres-config
+  initdbScriptsConfigMap: bbk-postgresql-config
 
   ## Secret with scripts to be run at first boot (in case it contains sensitive information)
   ## NOTE: This can work along initdbScripts or initdbScriptsConfigMap
