--- a/helm/charts/bit-broker/templates/postgres-config.yaml
+++ b/helm/charts/bit-broker/templates/postgres-config.yaml
@@ -43,7 +43,6 @@ data:
     DROP USER IF EXISTS bbk_coordinator;
     DROP USER IF EXISTS bbk_contributor;
     DROP USER IF EXISTS bbk_consumer;
-    DROP USER IF EXISTS bbk_policy;
 
     DROP ROLE IF EXISTS bbk_reader;
     DROP ROLE IF EXISTS bbk_writer;
@@ -58,10 +57,9 @@ data:
     CREATE USER bbk_coordinator WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.coordinator }}';
     CREATE USER bbk_contributor WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.contributor }}';
     CREATE USER bbk_consumer WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.consumer }}';
-    CREATE USER bbk_policy WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.policy }}';
 
     GRANT bbk_reader TO bbk_consumer;
-    GRANT bbk_writer TO bbk_admin, bbk_tests, bbk_coordinator, bbk_contributor, bbk_policy;
+    GRANT bbk_writer TO bbk_admin, bbk_tests, bbk_coordinator, bbk_contributor;
 
     -- create the database
 
