--- a/helm/charts/bit-broker/templates/oathkeeper-config.yaml
+++ b/helm/charts/bit-broker/templates/oathkeeper-config.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: bbk-oathkeeper-rules
+  name: '{{ .Release.Name }}-bbk-oathkeeper-rules'
   namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
