--- a/helm/charts/contributor/templates/deployment.yaml
+++ b/helm/charts/contributor/templates/deployment.yaml
@@ -53,7 +53,7 @@ spec:
             - name: DATABASE
               value: "postgresql://CREDENTIALS@{{ .Release.Name }}-bbk-postgresql/bit_broker"
             - name: POLICY_CACHE
-              value: "redis://{{ .Release.Name }}-coordinator-cache:6379"
+              value: "redis://{{ .Release.Name }}-bbk-coordinator-cache:6379"
             - name: APP_SERVER_METRICS
               value: "{{ .Values.metrics.enabled | default .Values.global.metrics.enabled }}"
           envFrom:
