--- a/helm/charts/contributor/values.yaml
+++ b/helm/charts/contributor/values.yaml
@@ -15,7 +15,7 @@ replicaCount: 1
 
 ## Database access
 ##
-password: bbk_contributor_pwd
+# password: bbk_contributor_pwd
 
 ## Enable or disable metrics for Prometheus
 ##
