--- a/helm/charts/bit-broker/templates/postgres-config.yaml
+++ b/helm/charts/bit-broker/templates/postgres-config.yaml
@@ -43,6 +43,7 @@ data:
     DROP USER IF EXISTS bbk_coordinator;
     DROP USER IF EXISTS bbk_contributor;
     DROP USER IF EXISTS bbk_consumer;
+    DROP USER IF EXISTS bbk_tests;
 
     DROP ROLE IF EXISTS bbk_reader;
     DROP ROLE IF EXISTS bbk_writer;
@@ -59,13 +60,27 @@ data:
     CREATE USER bbk_consumer WITH ENCRYPTED PASSWORD '{{ .Values.global.passwords.consumer }}';
 
     GRANT bbk_reader TO bbk_consumer;
-    GRANT bbk_writer TO bbk_admin, bbk_tests, bbk_coordinator, bbk_contributor;
+    GRANT bbk_writer TO bbk_admin, bbk_coordinator, bbk_contributor;
 
     -- create the database
 
     CREATE DATABASE bit_broker WITH ENCODING = 'UTF8' OWNER = bbk_admin;
-
     \connect bit_broker
+
+    -- extensions
+
+    CREATE EXTENSION postgis;
+
+    -- user table
+
+    CREATE TABLE users
+    (
+        id SERIAL PRIMARY KEY,
+        email VARCHAR (256) UNIQUE NOT NULL,
+        properties JSONB NOT NULL,
+        created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+        updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
+    );
 
     -- entity table
 
@@ -151,6 +166,25 @@ data:
     );
 
     CREATE INDEX idx_policy_slug ON policy (slug);
+
+    -- access table
+
+    CREATE TYPE access_scopes AS ENUM ('coordinator', 'contributor', 'consumer');
+
+    CREATE TABLE access
+    (
+        id SERIAL PRIMARY KEY,
+        user_id SERIAL REFERENCES users (id) ON DELETE CASCADE,
+        key_id CHAR(36) UNIQUE NOT NULL,
+        scope ACCESS_SCOPES NOT NULL,
+        policy_id SERIAL REFERENCES policy (id) ON DELETE CASCADE,
+        created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+        updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+        UNIQUE (user_id, scope, policy_id)
+    );
+
+    CREATE INDEX idx_access_user ON access (user_id);
+    CREATE INDEX idx_access_policy ON access (policy_id);
 
     -- grant permissions - TODO allocate more specific grants based on each user
 
