[Env] Change database env name

--- a/helm/charts/consumer/templates/deployment.yaml
+++ b/helm/charts/consumer/templates/deployment.yaml
@@ -46,12 +46,12 @@ spec:
               value: "Bit-Broker"
             - name: APP_MODE
               value: "standard"
+            - name: APP_DATABASE
+              value: "postgresql://CREDENTIALS@{{ .Release.Name }}-bbk-postgresql/bit_broker"
             - name: CONSUMER_NAME
               value: "Bit-Broker Consumer Server"
             - name: CONSUMER_BASE
               value: "http://{{ .Release.Name }}-{{ .Chart.Name }}:8001/v1"
-            - name: DATABASE
-              value: "postgresql://CREDENTIALS@{{ .Release.Name }}-bbk-postgresql/bit_broker"
             - name: POLICY_CACHE
               value: "redis://{{ .Release.Name }}-bbk-coordinator-cache:6379"
             - name: APP_SERVER_METRICS
