--- a/helm/charts/contributor/templates/deployment.yaml
+++ b/helm/charts/contributor/templates/deployment.yaml
@@ -46,12 +46,12 @@ spec:
               value: "Bit-Broker"
             - name: APP_MODE
               value: "standard"
+            - name: APP_DATABASE
+              value: "postgresql://CREDENTIALS@{{ .Release.Name }}-bbk-postgresql/bit_broker"
             - name: CONTRIBUTOR_NAME
               value: "Bit-Broker Contributor Server"
             - name: CONTRIBUTOR_BASE
               value: "http://{{ .Release.Name }}-{{ .Chart.Name }}:8002/v1"
-            - name: DATABASE
-              value: "postgresql://CREDENTIALS@{{ .Release.Name }}-bbk-postgresql/bit_broker"
             - name: POLICY_CACHE
               value: "redis://{{ .Release.Name }}-bbk-coordinator-cache:6379"
             - name: APP_SERVER_METRICS
