--- a/helm/charts/auth-service/templates/secret.yaml
+++ b/helm/charts/auth-service/templates/secret.yaml
@@ -7,5 +7,7 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+  annotations:
+    helm.sh/hook: pre-install
 data:
   JWKS: {{ .Values.JWKS }}
