--- a/helm/charts/bit-broker/templates/oathkeeper-config.yaml
+++ b/helm/charts/bit-broker/templates/oathkeeper-config.yaml
@@ -24,6 +24,9 @@ data:
             "required_scope": ["consumer"],
             "trusted_issuers": ["{{ .Values.global.issuer }}"],
             "allowed_algorithms": ["RS256"],
+            "jwks_urls": [
+              "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/.well-known/jwks.json"
+            ],
             "token_from": {
               "header": "x-bbk-auth-token"
             }
@@ -38,7 +41,7 @@ data:
           "handler": "header",
           "config": {
             "headers": {
-              "x-bbk-audience": '"{{" print .Audience "}}"'
+              "x-bbk-audience": '{{ "{{ print .Extra.aud }}" }}'
             }
           }
         }
@@ -58,6 +61,9 @@ data:
           "required_scope": ["contributor"],
           "trusted_issuers": ["{{ .Values.global.issuer }}"],
           "allowed_algorithms": ["RS256"],
+          "jwks_urls": [
+            "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/.well-known/jwks.json"
+          ],
           "token_from": {
             "header": "x-bbk-auth-token"
           }
@@ -72,7 +78,7 @@ data:
         "handler": "header",
         "config": {
           "headers": {
-            "x-bbk-audience": '"{{" print .Audience "}}"'
+            "x-bbk-audience": '{{ "{{ print .Extra.aud }}" }}'
           }
         }
       }
@@ -92,6 +98,9 @@ data:
           "required_scope": ["coordinator"],
           "trusted_issuers": ["{{ .Values.global.issuer }}"],
           "allowed_algorithms": ["RS256"],
+          "jwks_urls": [
+            "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/.well-known/jwks.json"
+          ],
           "token_from": {
             "header": "x-bbk-auth-token"
           }
@@ -106,7 +115,7 @@ data:
         "handler": "header",
         "config": {
           "headers": {
-            "x-bbk-audience": '"{{" print .Audience "}}"'
+            "x-bbk-audience": '{{ "{{ print .Extra.aud }}" }}'
           }
         }
       }
