--- a/helm/charts/bit-broker/templates/oathkeeper-config.yaml
+++ b/helm/charts/bit-broker/templates/oathkeeper-config.yaml
@@ -34,7 +34,13 @@ data:
         }
       ],
       "authorizer": {
-        "handler": "allow"
+        "handler": "remote",
+        "config": {
+          "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/authorize",
+          "headers": {
+            "x-auth-jti": '{{ "{{ print .Extra.jti }}" }}'
+          }
+        }
       },
       "mutators": [
         {
@@ -71,7 +77,13 @@ data:
       }
     ],
     "authorizer": {
-      "handler": "allow"
+      "handler": "remote",
+      "config": {
+        "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/authorize",
+        "headers": {
+          "x-auth-jti": '{{ "{{ print .Extra.jti }}" }}'
+        }
+      }
     },
     "mutators": [
       {
@@ -108,7 +120,13 @@ data:
       }
     ],
     "authorizer": {
-      "handler": "allow"
+      "handler": "remote",
+      "config": {
+        "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/authorize",
+        "headers": {
+          "x-auth-jti": '{{ "{{ print .Extra.jti }}" }}'
+        }
+      }
     },
     "mutators": [
       {
