--- a/helm/charts/bit-broker/templates/oathkeeper-config.yaml
+++ b/helm/charts/bit-broker/templates/oathkeeper-config.yaml
@@ -36,7 +36,7 @@ data:
       "authorizer": {
         "handler": "remote",
         "config": {
-          "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/authorize",
+          "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/check",
           "headers": {
             "x-auth-jti": '{{ "{{ print .Extra.jti }}" }}'
           }
@@ -79,7 +79,7 @@ data:
     "authorizer": {
       "handler": "remote",
       "config": {
-        "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/authorize",
+        "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/check",
         "headers": {
           "x-auth-jti": '{{ "{{ print .Extra.jti }}" }}'
         }
@@ -122,7 +122,7 @@ data:
     "authorizer": {
       "handler": "remote",
       "config": {
-        "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/authorize",
+        "remote": "http://{{ .Release.Name }}-bbk-auth-service:8080/api/v1/token/check",
         "headers": {
           "x-auth-jti": '{{ "{{ print .Extra.jti }}" }}'
         }
