--- a/helm/charts/rate-service/templates/deployment.yaml
+++ b/helm/charts/rate-service/templates/deployment.yaml
@@ -26,6 +26,7 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 1999
+        fsGroup: 1999
       imagePullSecrets:
       - name: {{ .Values.docker.imagePullSecret }}
       containers:
