--- a/helm/charts/bit-broker/templates/ambassador-config.yaml
+++ b/helm/charts/bit-broker/templates/ambassador-config.yaml
@@ -10,6 +10,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
+  ambassador_id: {{ index .Values "bbk-ambassador" "env" "AMBASSADOR_ID" }}
   hostname: {{ .Values.global.gateway.host }}
   acmeProvider:
     email: {{ .Values.global.gateway.acmeProvider }}
@@ -30,6 +31,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
+  ambassador_id: {{ index .Values "bbk-ambassador" "env" "AMBASSADOR_ID" }}
   auth_service: {{ .Release.Name }}-bbk-oathkeeper-api:4456
   timeout_ms: 5000
   failure_mode_allow: false
@@ -50,6 +52,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
+  ambassador_id: {{ index .Values "bbk-ambassador" "env" "AMBASSADOR_ID" }}
   service: {{ .Release.Name }}-bbk-rate-service:7000
   protocol_version: v2
 ---
@@ -63,6 +66,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
+  ambassador_id: {{ index .Values "bbk-ambassador" "env" "AMBASSADOR_ID" }}
   prefix: /consumer/
   service: {{ .Release.Name }}-bbk-consumer:8001
   labels:
@@ -82,6 +86,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
+  ambassador_id: {{ index .Values "bbk-ambassador" "env" "AMBASSADOR_ID" }}
   prefix: /contributor/
   service: {{ .Release.Name }}-bbk-contributor:8002
   labels:
@@ -101,5 +106,6 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 spec:
+  ambassador_id: {{ index .Values "bbk-ambassador" "env" "AMBASSADOR_ID" }}
   prefix: /coordinator/
   service: {{ .Release.Name }}-bbk-coordinator:8003
