--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -301,7 +301,7 @@ bbk-ambassador:
 
   ## Additional container environment variable
   ## Uncomment or add additional environment variables for the container here.
-  env: { }
+  env:
     ## Exposing statistics via StatsD
     # STATSD_ENABLED: true
     # STATSD_HOST: statsd-sink
@@ -312,7 +312,7 @@ bbk-ambassador:
     # sets the number of seconds that Ambassador will wait for the old Envoy to clean up and exit on a restart
     # AMBASSADOR_SHUTDOWN_TIME: 10
   ## labels Ambassador with an ID to allow for configuring multiple Ambassadors in a cluster
-  # AMBASSADOR_ID: default
+    AMBASSADOR_ID: ambassador-bbk
 
   # Additional container environment variable in raw YAML format
   # Uncomment or add additional environment variables for the container here.
