--- a/helm/charts/bit-broker/templates/post-install-setup.yaml
+++ b/helm/charts/bit-broker/templates/post-install-setup.yaml
@@ -1,5 +1,3 @@
-{{- $adminJti := uuidv4 -}}
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -27,4 +25,4 @@ metadata:
   annotations:
     helm.sh/hook: post-install
 data:
-  ADMIN_JTI: {{ $adminJti | b64enc }}
+  ADMIN_JTI: {{ .Values.global.admin.jti | b64enc }}
